--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="nl">
-  <head>{% include head.html %}</head>
+  <head>
+    {% include head.html %}
+  </head>
   <body>
-    <main class="wrap">
-      {{ content }}
-    </main>
+    {{ content }}
   </body>
 </html>
